--- a/styles/palette-default.less
+++ b/styles/palette-default.less
@@ -1,6 +1,8 @@
 @orange:#c26c23;
 @palette-color:@orange;
 @dark-grey:#333333;
+@border-grey:#d6d6d6;
+@border-white:#ffffff;
 @pop-link-btn:rgba(218,218,218,0.65);
 //Text-styling for this particular page
 //body text-styling
@@ -34,22 +36,16 @@
     -o-transition: all 0.4s linear;
     transition: all 0.4s linear;
 }
-
+.columnizer-row:first-child{
+    border-top:1px solid @border-white;
+}
 #header{
     position: relative;
     overflow: hidden;
     width:100%;
     padding:44px 0 25px 0;
-    #horizontal-line{
-        display: block;
-        position: absolute;
-        height:2px;
-        width:100%;
-        margin:0;
-        padding:0;
-        background:#b1b1b1 url("@{base-url}/images/horizontal.png");
-        bottom:0;
-    }
+    border-bottom:1px solid @border-grey;
+    
     #header-inner{
         max-width:900px;
         margin:0 auto;
@@ -180,7 +176,7 @@
             min-width:110px;
             li{
                 display: block;
-                float: left;
+                float: right;
                 margin-right: 4%;
                 width: 12.3188%;
                 a{
@@ -234,4 +230,7 @@
 }
 .columnizer-row:last-child .columnizer-row-inner{
     padding-bottom:0;
+}
+.columnizer-row-inner{
+    box-shadow: none;
 }
