--- a/styles/palette-profile.less
+++ b/styles/palette-profile.less
@@ -30,7 +30,9 @@
     -o-transition: color 0.4s linear;
     transition: color 0.4s linear;
 }
-
+.columnizer-row:first-child{
+    border-top:none;
+}
 
 #header{
     position: absolute;
@@ -134,7 +136,7 @@
             min-width:110px;
             li{
                 display: block;
-                float: left;
+                float: right;
                 margin-right: 6.85151%;
                 width: 12.3188%;
                 a{
@@ -185,4 +187,11 @@
 
 .columnizer-row:last-child .columnizer-row-inner{
     padding-bottom:65px;
+}
+.columnizer-row-inner{
+    box-shadow: 0px 1px 2px #cdcdcd, -1px 1px 2px #cdcdcd, 1px 1px 2px #cdcdcd;
+    -moz-box-shadow: 0px 1px 2px #cdcdcd, -1px 1px 2px #cdcdcd, 1px 1px 2px #cdcdcd;
+    -webkit-box-shadow: 0px 1px 2px #cdcdcd, -1px 1px 2px #cdcdcd, 1px 1px 2px #cdcdcd;
+    -ms-box-shadow: 0px 1px 2px #cdcdcd, -1px 1px 2px #cdcdcd, 1px 1px 2px #cdcdcd;
+    -o-box-shadow: 0px 1px 2px #cdcdcd, -1px 1px 2px #cdcdcd, 1px 1px 2px #cdcdcd;
 }
